feat: disabled models who are not working

--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -132,49 +132,25 @@ backends:
     secretRef:
       name: google-ai-studio-api-key-02
     tlsHostname: generativelanguage.googleapis.com
-  anthropic-01:
-    enabled: true
-    resourceName: anthropic-backend-01-svc
-    schema: OpenAI
-    prefix: v1/messages
-    fqdn:
-      hostname: api.anthropic.com
-      port: 443
-    securityType: APIKey
-    secretRef:
-      name: anthropic-api-key-01
-    tlsHostname: api.anthropic.com
-  anthropic-02:
-    enabled: true
-    resourceName: anthropic-backend-02-svc
-    schema: OpenAI
-    prefix: v1/messages
-    fqdn:
-      hostname: api.anthropic.com
-      port: 443
-    securityType: APIKey
-    secretRef:
-      name: anthropic-api-key-02
-    tlsHostname: api.anthropic.com
 
 models:
   # Fireworks AI Models
-  qwen3-coder-480b-a35b-instruct:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      fw-01:
-        enabled: true
-        ref: fw-01
-        modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
-        priority: 0
-      fw-02:
-        enabled: true
-        ref: fw-02
-        modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
-        priority: 1
+  # qwen3-coder-480b-a35b-instruct:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     fw-01:
+  #       enabled: true
+  #       ref: fw-01
+  #       modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
+  #       priority: 0
+  #     fw-02:
+  #       enabled: true
+  #       ref: fw-02
+  #       modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
+  #       priority: 1
 
   kimi-k2-instruct-0905:
     enabled: true
@@ -244,39 +220,39 @@ models:
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b-instruct-2507"
         priority: 1
 
-  llama4-maverick-instruct-basic:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      fw-01:
-        enabled: true
-        ref: fw-01
-        modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic" 
-        priority: 0
-      fw-02:
-        enabled: true
-        ref: fw-02
-        modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic"
-        priority: 1
+  # llama4-maverick-instruct-basic:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     fw-01:
+  #       enabled: true
+  #       ref: fw-01
+  #       modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic" 
+  #       priority: 0
+  #     fw-02:
+  #       enabled: true
+  #       ref: fw-02
+  #       modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic"
+  #       priority: 1
 
-  llama-v3p1-8b-instruct:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      fw-01:
-        enabled: true
-        ref: fw-01
-        modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
-        priority: 0
-      fw-02:
-        enabled: true
-        ref: fw-02
-        modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
-        priority: 1
+  # llama-v3p1-8b-instruct:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     fw-01:
+  #       enabled: true
+  #       ref: fw-01
+  #       modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
+  #       priority: 0
+  #     fw-02:
+  #       enabled: true
+  #       ref: fw-02
+  #       modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
+  #       priority: 1
 
   gpt-oss-120b:
     enabled: true
@@ -346,23 +322,6 @@ models:
         modelNameOverride: "accounts/fireworks/models/qwen3-coder-30b-a3b-instruct"
         priority: 1
 
-  qwen3-30b-a3b:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      fw-01:
-        enabled: true
-        ref: fw-01
-        modelNameOverride: "accounts/fireworks/models/qwen3-30b-a3b"
-        priority: 0
-      fw-02:
-        enabled: true
-        ref: fw-02
-        modelNameOverride: "accounts/fireworks/models/qwen3-30b-a3b"
-        priority: 1
-
   qwen3-235b-a22b:
     enabled: true
     envoyRateLimit:
@@ -397,22 +356,22 @@ models:
         modelNameOverride: "accounts/fireworks/models/glm-4p6"
         priority: 1
 
-  glm-4p5:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      fw-01:
-        enabled: true
-        ref: fw-01
-        modelNameOverride: "accounts/fireworks/models/glm-4p5"
-        priority: 0
-      fw-02:
-        enabled: true
-        ref: fw-02
-        modelNameOverride: "accounts/fireworks/models/glm-4p5"
-        priority: 1
+  # glm-4p5:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     fw-01:
+  #       enabled: true
+  #       ref: fw-01
+  #       modelNameOverride: "accounts/fireworks/models/glm-4p5"
+  #       priority: 0
+  #     fw-02:
+  #       enabled: true
+  #       ref: fw-02
+  #       modelNameOverride: "accounts/fireworks/models/glm-4p5"
+  #       priority: 1
 
   deepseek-v3p1-terminus:
     enabled: true
@@ -429,24 +388,6 @@ models:
         enabled: true
         ref: fw-02
         modelNameOverride: "accounts/fireworks/models/deepseek-v3p1-terminus"
-        priority: 1
-
-  # Anthropic Models
-  claude-sonnet-4:
-    enabled: true
-    envoyRateLimit:
-      requests: 30000
-      unit: Minute
-    backends:
-      anthropic-01:
-        enabled: true
-        ref: anthropic-01
-        modelNameOverride: "claude-sonnet-4-20250514" 
-        priority: 0
-      anthropic-02:
-        enabled: true
-        ref: anthropic-02
-        modelNameOverride: "claude-sonnet-4-20250514"
         priority: 1
 
   # OpenAI Models
@@ -467,22 +408,22 @@ models:
         modelNameOverride: "o4-mini"
         priority: 1
 
-  o4-mini-deep-research:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "o4-mini-deep-research"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "o4-mini-deep-research"
-        priority: 1
+  # o4-mini-deep-research:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "o4-mini-deep-research"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "o4-mini-deep-research"
+  #       priority: 1
 
   gpt-4-1:
     enabled: true
@@ -569,25 +510,25 @@ models:
         modelNameOverride: "gpt-5-nano"
         priority: 1
 
-  codex-mini-latest:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "codex-mini-latest"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "codex-mini-latest"
-        priority: 1
+  # codex-mini-latest:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "codex-mini-latest"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "codex-mini-latest"
+  #       priority: 1
 
   text-embedding-3-large:
-    enabled: true
+    enabled: true 
     envoyRateLimit:
       requests: 10000
       unit: Minute
@@ -604,7 +545,7 @@ models:
         priority: 1
 
   dall-e-3:
-    enabled: true
+    enabled: true 
     envoyRateLimit:
       requests: 50000
       unit: Minute
@@ -620,41 +561,41 @@ models:
         modelNameOverride: "dall-e-3"
         priority: 1
 
-  gpt-image-1:
-    enabled: true
-    envoyRateLimit:
-      requests: 50000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "gpt-image-1"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "gpt-image-1"
-        priority: 1
+  # gpt-image-1:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 50000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "gpt-image-1"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "gpt-image-1"
+  #       priority: 1
 
-  whisper-1:
-    enabled: true
-    envoyRateLimit:
-      requests: 10000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "whisper-1"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "whisper-1"
-        priority: 1
+  # whisper-1:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 10000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "whisper-1"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "whisper-1"
+  #       priority: 1
 
-  gpt-4o-mini-audio:
+  gpt-4o-mini-audio: 
     enabled: true
     envoyRateLimit:
       requests: 10000
@@ -671,39 +612,39 @@ models:
         modelNameOverride: "gpt-4o-mini-audio-preview-2024-12-17"
         priority: 1
 
-  gpt-4o-transcribe:
-    enabled: true
-    envoyRateLimit:
-      requests: 10000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "gpt-4o-transcribe"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "gpt-4o-transcribe"
-        priority: 1
+  # gpt-4o-transcribe:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 10000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "gpt-4o-transcribe"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "gpt-4o-transcribe"
+  #       priority: 1
 
-  gpt-4o-mini-tts:
-    enabled: true
-    envoyRateLimit:
-      requests: 10000
-      unit: Minute
-    backends:
-      openai-01:
-        enabled: true
-        ref: openai-01
-        modelNameOverride: "gpt-4o-mini-tts"
-        priority: 0
-      openai-02:
-        enabled: true
-        ref: openai-02
-        modelNameOverride: "gpt-4o-mini-tts"
-        priority: 1
+  # gpt-4o-mini-tts:
+  #   enabled: true
+  #   envoyRateLimit:
+  #     requests: 10000
+  #     unit: Minute
+  #   backends:
+  #     openai-01:
+  #       enabled: true
+  #       ref: openai-01
+  #       modelNameOverride: "gpt-4o-mini-tts"
+  #       priority: 0
+  #     openai-02:
+  #       enabled: true
+  #       ref: openai-02
+  #       modelNameOverride: "gpt-4o-mini-tts"
+  #       priority: 1
 
   # Google Gemini Models
   gemini-2-5-flash:
@@ -794,7 +735,7 @@ models:
   gemini-3-pro:
     enabled: true
     envoyRateLimit:
-      requests: 50000
+      requests: 50000 
       unit: Minute
     backends:
       google-ai-studio-01:
