feat: add image genaration open ai and vertexAI models

--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -561,22 +561,22 @@ models:
         modelNameOverride: "dall-e-3"
         priority: 1
 
-  # gpt-image-1:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
-  #   backends:
-  #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
-  #       modelNameOverride: "gpt-image-1"
-  #       priority: 0
-  #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
-  #       modelNameOverride: "gpt-image-1"
-  #       priority: 1
+  gpt-image-1:
+    enabled: true
+    envoyRateLimit:
+      requests: 50000
+      unit: Minute
+    backends:
+      openai-01:
+        enabled: true
+        ref: openai-01
+        modelNameOverride: "gpt-image-1"
+        priority: 0
+      openai-02:
+        enabled: true
+        ref: openai-02
+        modelNameOverride: "gpt-image-1"
+        priority: 1
 
   # whisper-1:
   #   enabled: true
@@ -698,7 +698,7 @@ models:
         modelNameOverride: "gemini-2.5-pro"
         priority: 1
 
-  gemini-2-5-pro-reasoning-4096:
+  gemini-3-pro-image-preview:
     enabled: true
     envoyRateLimit:
       requests: 50000
@@ -707,12 +707,12 @@ models:
       vertex-ai-01:
         enabled: true
         ref: vertex-ai-01
-        modelNameOverride: "gemini-2.5-pro"
+        modelNameOverride: "gemini-3-pro-image-preview"
         priority: 0
       vertex-ai-02:
         enabled: true
         ref: vertex-ai-02
-        modelNameOverride: "gemini-2.5-pro"
+        modelNameOverride: "gemini-3-pro-image-preview"
         priority: 1
 
   gemini-2-5-flash-lite:
