--- a/charts/keycloak-backup/templates/cronjob-backup.yaml
+++ b/charts/keycloak-backup/templates/cronjob-backup.yaml
@@ -17,7 +17,7 @@ metadata:
     {{- if $cronjob.annotations }}
     {{- toYaml $cronjob.annotations | nindent 4 }}
     {{- end }}
-    description: "Scheduled Keycloak full configuration backup using kc.sh export"
+    description: "Keycloak configuration backup using kc.sh export"
 spec:
   schedule: {{ $cronjob.schedule | quote }}
   successfulJobsHistoryLimit: {{ $cronjob.successfulJobsHistoryLimit | default 3 }}
@@ -28,7 +28,67 @@ spec:
       template:
         spec:
           containers:
-            - name: backup
+            - name: uploader
+              image: amazon/aws-cli:2.15.0
+              env:
+                - name: S3_BUCKET
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ $root.Values.s3.secretName }}
+                      key: S3_BUCKET_NAME
+                - name: AWS_ACCESS_KEY_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ $root.Values.s3.secretName }}
+                      key: S3_ACCESS_KEY_ID
+                - name: AWS_SECRET_ACCESS_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ $root.Values.s3.secretName }}
+                      key: S3_SECRET_ACCESS_KEY
+                # - name: AWS_SESSION_TOKEN
+                #   valueFrom:
+                #     secretKeyRef:
+                #       name: {{ $root.Values.s3.secretName }}
+                #       key: AWS_SESSION_TOKEN
+                - name: AWS_DEFAULT_REGION
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ $root.Values.s3.secretName }}
+                      key: S3_REGION_NAME
+              command:
+                - /bin/sh
+                - -c
+                - |
+                  TIMESTAMP=$(date -u +"%Y%m%d_%H%M%S")
+                  
+                  # Wait for export
+                  echo "Waiting for export..."
+                  while [ ! -f /exported/realm_backup.json ]; do
+                    sleep 2
+                  done
+                  
+                  {{- if .Values.keycloak.realm }}
+                  BACKUP_FILE="{{ .Values.keycloak.realm }}_${TIMESTAMP}.json"
+                  {{- else }}
+                  BACKUP_FILE="all-realms_${TIMESTAMP}.json"
+                  {{- end }}
+                  
+                  # Upload to S3
+                  aws s3 cp /exported/realm_backup.json s3://${S3_BUCKET}/{{ $root.Values.s3.prefix }}/${BACKUP_FILE}
+                  
+                  echo "Uploaded: $BACKUP_FILE"
+              volumeMounts:
+                - name: export-volume
+                  mountPath: /exported
+              securityContext:
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
+                capabilities:
+                  drop:
+                    - ALL
+          initContainers:
+            - name: exporter
               image: quay.io/keycloak/keycloak:24.0
               env:
                 - name: KEYCLOAK_ADMIN
@@ -46,79 +106,45 @@ spec:
                     secretKeyRef:
                       name: {{ $root.Values.keycloak.secretName }}
                       key: hostname
-                - name: S3_BUCKET
-                  valueFrom:
-                    secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
-                      key: S3_BUCKET_NAME
-                - name: S3_ACCESS_KEY_ID
-                  valueFrom:
-                    secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
-                      key: S3_ACCESS_KEY_ID
-                - name: S3_SECRET_ACCESS_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
-                      key: S3_SECRET_ACCESS_KEY
-                - name: S3_REGION
-                  valueFrom:
-                    secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
-                      key: S3_REGION_NAME
               command:
                 - /bin/sh
                 - -c
                 - |
                   TIMESTAMP=$(date -u +"%Y%m%d_%H%M%S")
                   
-                  # Start Keycloak in temporary mode for export
-                  echo "Starting Keycloak for full export..."
+                  # Create writable directory for Quarkus build
+                  export QUARKUS_CACHE_DIR=/tmp/quarkus-cache
+                  mkdir -p $QUARKUS_CACHE_DIR
                   
                   {{- if .Values.keycloak.realm }}
-                  # Export specific realm including everything using kc.sh
-                  echo "Exporting realm: {{ .Values.keycloak.realm }} (including users)"
-                  /opt/keycloak/bin/kc.sh export \
+                  echo "Exporting realm: {{ .Values.keycloak.realm }}"
+                  KC_CACHE_DIR=$QUARKUS_CACHE_DIR /opt/keycloak/bin/kc.sh export \
                     --realm {{ .Values.keycloak.realm }} \
-                    --file /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json \
-                    --users include
-                  
-                  # Compress and upload
-                  gzip -c /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json > /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json.gz
-                  
-                  if [ -n "{{ $root.Values.s3.prefix }}" ]; then
-                    aws s3 cp /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json.gz s3://{{ $root.Values.s3.secretName }}/{{ $root.Values.s3.prefix }}/
-                  else
-                    aws s3 cp /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json.gz s3://${S3_BUCKET}/
-                  fi
-                  
-                  rm -f /tmp/{{ .Values.keycloak.realm }}_${TIMESTAMP}.json.gz
-                  
+                    --file /exported/realm_backup.json \
+                    --users realm_file --optimized
                   {{- else }}
-                  # Export all realms including everything using kc.sh
-                  echo "Exporting all realms (including users)..."
-                  /opt/keycloak/bin/kc.sh export \
-                    --file /tmp/all-realms_${TIMESTAMP}.json \
-                    --users include
-                  
-                  # Compress and upload
-                  gzip -c /tmp/all-realms_${TIMESTAMP}.json > /tmp/all-realms_${TIMESTAMP}.json.gz
-                  
-                  if [ -n "{{ $root.Values.s3.prefix }}" ]; then
-                    aws s3 cp /tmp/all-realms_${TIMESTAMP}.json.gz s3://{{ $root.Values.s3.secretName }}/{{ $root.Values.s3.prefix }}/
-                  else
-                    aws s3 cp /tmp/all-realms_${TIMESTAMP}.json.gz s3://${S3_BUCKET}/
-                  fi
-                  
-                  rm -f /tmp/all-realms_${TIMESTAMP}.json.gz
+                  echo "Exporting all realms"
+                  KC_CACHE_DIR=$QUARKUS_CACHE_DIR /opt/keycloak/bin/kc.sh export \
+                    --all \
+                    --file /exported/realm_backup.json \
+                    --users realm_file --optimized
                   {{- end }}
                   
-                  echo "Full backup completed successfully!"
+                  echo "Export complete"
+              volumeMounts:
+                - name: export-volume
+                  mountPath: /exported
               securityContext:
+                runAsUser: 1000
+                runAsGroup: 1000
+                runAsNonRoot: true
                 allowPrivilegeEscalation: false
-                readOnlyRootFilesystem: true
+                readOnlyRootFilesystem: false
                 capabilities:
                   drop:
                     - ALL
+          volumes:
+            - name: export-volume
+              emptyDir: {}
           restartPolicy: OnFailure
 {{- end }}
