feat: add TLS and HTTPS redirect configuration options

--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -1,3 +1,20 @@
+tls:
+  enabled: true
+
+  domains:
+    - converse-llm.camer.digital
+
+  secretName: converse-llm-tls
+
+  issuer:
+    enabled: true
+    kind: ClusterIssuer
+    name: letsencrypt
+    email: security@camer.digital
+    environment: staging # staging | prod
+
+  redirectToHttps: true
+
 gatewayClass:
   enabled: true
   name: ai-gateway
