--- a/charts/models/templates/backendtrafficpolicy.yaml
+++ b/charts/models/templates/backendtrafficpolicy.yaml
@@ -35,6 +35,18 @@ spec:
           limit:
             requests: {{ $routeConfig.envoyRateLimit.requests }}
             unit: {{ $routeConfig.envoyRateLimit.unit }}
+        {{- with $routeConfig.envoyTokenRateLimits }}
+        {{- range . }}
+        - clientSelectors:
+            - headers:
+                - name: x-user-id
+                  type: Distinct
+                - name: x-ai-eg-model
+                  type: Exact
+                  value: {{ $routeConfig.modelMatch | default $routeName }}
+          limit:
+            requests: {{ .tokens }}
+            unit: {{ .unit }}
           cost:
             request:
               from: Number
@@ -44,6 +56,8 @@ spec:
               metadata:
                 namespace: io.envoy.ai_gateway
                 key: llm_total_token
+        {{- end }}
+        {{- end }}
         {{- end }}
         {{- end }}
   {{- end }}
