--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -157,6 +157,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       fw-01:
         enabled: true
@@ -174,6 +181,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 800000
+      - unit: Month
+        tokens: 15000000
+      - unit: Year
+        tokens: 180000000
     backends:
       fw-01:
         enabled: true
@@ -191,6 +205,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       fw-01:
         enabled: true
@@ -208,6 +229,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       fw-01:
         enabled: true
@@ -259,6 +287,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       fw-01:
         enabled: true
@@ -276,6 +311,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       fw-01:
         enabled: true
@@ -293,6 +335,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 800000
+      - unit: Month
+        tokens: 15000000
+      - unit: Year
+        tokens: 180000000
     backends:
       fw-01:
         enabled: true
@@ -310,6 +359,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 2000000
+      - unit: Month
+        tokens: 45000000
+      - unit: Year
+        tokens: 540000000
     backends:
       fw-01:
         enabled: true
@@ -327,6 +383,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       fw-01:
         enabled: true
@@ -344,6 +407,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       fw-01:
         enabled: true
@@ -378,6 +448,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       fw-01:
         enabled: true
@@ -396,6 +473,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       openai-01:
         enabled: true
@@ -430,6 +514,13 @@ models:
     envoyRateLimit:
       requests: 30
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1500000
+      - unit: Month
+        tokens: 35000000
+      - unit: Year
+        tokens: 420000000
     backends:
       openai-01:
         enabled: true
@@ -447,6 +538,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       openai-01:
         enabled: true
@@ -464,6 +562,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       openai-01:
         enabled: true
@@ -481,6 +586,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       openai-01:
         enabled: true
@@ -498,6 +610,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       openai-01:
         enabled: true
@@ -532,6 +651,13 @@ models:
     envoyRateLimit:
       requests: 10000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 10000000
+      - unit: Month
+        tokens: 300000000
+      - unit: Year
+        tokens: 3600000000
     backends:
       openai-01:
         enabled: true
@@ -600,6 +726,13 @@ models:
     envoyRateLimit:
       requests: 10000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 500000
+      - unit: Month
+        tokens: 12000000
+      - unit: Year
+        tokens: 144000000
     backends:
       openai-01:
         enabled: true
@@ -652,6 +785,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       vertex-ai-01:
         enabled: true
@@ -669,6 +809,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       vertex-ai-01:
         enabled: true
@@ -686,6 +833,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       vertex-ai-01:
         enabled: true
@@ -720,6 +874,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       vertex-ai-01:
         enabled: true
@@ -737,6 +898,13 @@ models:
     envoyRateLimit:
       requests: 50000 
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 1000000
+      - unit: Month
+        tokens: 20000000
+      - unit: Year
+        tokens: 240000000
     backends:
       google-ai-studio-01:
         enabled: true
@@ -754,6 +922,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 3000000
+      - unit: Month
+        tokens: 80000000
+      - unit: Year
+        tokens: 960000000
     backends:
       google-ai-studio-01:
         enabled: true
@@ -771,6 +946,13 @@ models:
     envoyRateLimit:
       requests: 50000
       unit: Minute
+    envoyTokenRateLimits:
+      - unit: Day
+        tokens: 800000
+      - unit: Month
+        tokens: 15000000
+      - unit: Year
+        tokens: 180000000
     backends:
       google-ai-studio-01:
         enabled: true
