--- a/charts/ai-gateway-core/templates/gateway.yaml
+++ b/charts/ai-gateway-core/templates/gateway.yaml
@@ -15,8 +15,18 @@ metadata:
 spec:
   gatewayClassName: {{ .Values.gateway.className | default .Values.gatewayClass.name }}
   listeners:
-{{- toYaml .Values.gateway.listeners | nindent 4 }}
-{{- include "ai-gateway.tlsListener" . | nindent 4 }}
+    {{- range .Values.gateway.listeners }}
+    - name: {{ .name }}
+      protocol: {{ .protocol }}
+      port: {{ .port }}
+      {{- if .hostname }}
+      hostname: {{ .hostname | quote }}
+      {{- end }}
+      {{- if .tls }}
+      tls:
+        {{- toYaml .tls | nindent 8 }}
+      {{- end }}
+    {{- end }}
   {{- if and .Values.gateway.infrastructure.enabled .Values.envoyProxy.enabled }}
   infrastructure:
     parametersRef:
