--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -32,8 +32,17 @@ gateway:
     - name: http
       protocol: HTTP
       port: 80
+    - name: https
+      protocol: HTTPS
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            name: converse-llm-tls
   infrastructure:
     enabled: true
+
 
 envoyProxy:
   enabled: true
